--- a/home/techguides/automated-factories.html
+++ b/home/techguides/automated-factories.html
@@ -80,7 +80,7 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+<div class="NOTE"><h5>Note</h5><p> Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
 </div>
 <h2 id="automated-factories">Automated Factories</h2>
 <p>Factories are the core Assemble components that define how, what and when to deploy, test and promote the various components used by an organization. </p>
@@ -149,7 +149,7 @@
 </ol>
 <div class="NOTE"><h5>Note</h5><p>You can set up a factory based on a custom template created from either a factory run or an Extend environment (the template is created by you via the <a href="http://documentation.temenos.cloud/home/techguides/save-as-new-template.html">&#39;Save as New Template&#39;</a> feature). A factory created using a custom template is not associated with any product and promotion configuration, therefore in the <em>Select Principle Products</em> fields you can&#39;t select any of you products. This allows you to run the test cases on a newly created template based on upgrades.</p>
 </div>
-<p><img src="./images/factory-product-configuration-custom-template.png" alt=""></p>
+<p><img src="images/factory-product-configuration-custom-template.png" alt=""></p>
 <ol>
 <li><p><strong>Select Principle Products</strong> and <strong>Select Other Products</strong>: select none, one or more products from the drop-down. The products selected at this stage are promoted to the next stage (the configured one).  You must select at least one <strong>Principal</strong> or <strong>Other Product</strong> in any of these two fields to progress with the factory creation. I.e.: in the screenshot below we selected a product only in the <strong>Other Product</strong>.</p>
 </li>
@@ -158,7 +158,7 @@
 <li><p>Click <strong>Next</strong>.</p>
 </li>
 </ol>
-<p><img src="./images/factory-product-configuration.png" alt=""> </p>
+<p><img src="images/factory-product-configuration.png" alt=""> </p>
 <h2 id="test-configuration">Test Configuration</h2>
 <p>The Test Configuration consists in in-build service tasks and is used to  trigger tests for a given factory-run, trigger export of application logs.</p>
 <p>Depending on your organisation settings, you may / may not have a Default Workflow or the option to select from a list of workflows defined by the users from your organisation. During this phase, you have to fill in the <strong>Workflow</strong> steps - a sample which displays the steps (in that exact sequence) that are executed by the selected workflow. Assuming that you select the <strong>Default Workflow</strong>, you need to fill in the following fields:</p>
