--- a/home/techguides/fix-issues-factory-run.html
+++ b/home/techguides/fix-issues-factory-run.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h2 id="artifactory">Artifactory</h2>
 
+<div class="NOTE"><h5>Note</h5><p> Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+<h2 id="artifactory">Artifactory</h2>
+</div>
 <p>Each Organisation provided has an repository associated automatically. This repository is available in Jfrog Artifactory and has a default name. </p>
 <p>Once logged into the portal, you can check the information related to the artifactory by clicking the General button on the left menu. This will display the Metadata Settings.</p>
 <p><img src="images/sanity-general.png" alt=""></p>
