--- a/home/techguides/release-notes.html
+++ b/home/techguides/release-notes.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h2 id="release-notes">Release Notes</h2>
 
+<div class="NOTE"><h5>Note</h5><p> Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h2 id="release-notes">Release Notes</h2>
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release. </p>
 <h1 id="202102"><strong>202102</strong></h1>
 <p><strong>InfraBuild</strong>: 39  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202011.RC3
