--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -115,7 +115,7 @@ responsibility to inform the new user about its credentials and set of permissio
 </br></p>
 <h1 id="show-tooltips">Show tooltips</h1>
 <p>As an organization admin you can enable the tooltips in the portal that show what are the required permissions for the actions on hover.</p>
-<p><img src="./images/show-permissions.png" alt=""></p>
+<p><img src="images/show-permissions.png" alt=""></p>
 <h1 id="user-roles-management">User Roles Management</h1>
 <p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).</p>
 <p><img src="images/see-user-role.png" alt=""></p>
