--- a/home/techguides/run-factory.html
+++ b/home/techguides/run-factory.html
@@ -80,7 +80,7 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+<div class="NOTE"><h5>Note</h5><p> Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
 </div>
 <h2 id="run-factory">Run Factory</h2>
 <p>After setting-up a factory (see configuration steps <a href="http://documentation.temenos.cloud/home/techguides/automated-factories.html#set-up-create-a-automated-factory">here</a>, go to <strong>Dashboard</strong> on the main menu and select the factory you created (in case you have more factories). </p>
@@ -103,7 +103,7 @@
 <p>See the following scenarios if you choose to skip the factory environment creation:</p>
 <ul>
 <li><p><strong>Scenario 1</strong> - If the factory environment status is <strong>STARTED</strong>, the factory run will trigger directly the test environment. </p>
-<p><img src="./images/factory_run_started_env.png" alt="">
+<p><img src="images/factory_run_started_env.png" alt="">
 <br></p>
 </li>
 <li><p><strong>Scenario 2</strong> - If the factory environment status is <strong>STOPPED</strong> and previous environment status is <strong>STARTED</strong> - the factory run automatically starts the environment and once it is <strong>STARTED</strong>, it triggers the test environment. </p>
