--- a/home/techguides/save-as-new-template.html
+++ b/home/techguides/save-as-new-template.html
@@ -80,7 +80,7 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+<div class="NOTE"><h5>Note</h5><p> Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
 </div>
 <h1 id="save-as-new-template">Save as New Template</h1>
 <p>You can easily customize your templates via the <strong>Save as New Template</strong> feature. This self-service functionality enables you to create custom templates from a model bank template in just a few clicks. During this operation component binaries, deployment mechanisms or infrastructure can be changed and new components can be added.</p>
@@ -104,7 +104,7 @@
 <li><p>The template creation is initiated and you will be able to see it in the template catalog shortly. </p>
 </li>
 <li><p>After the template is created you can find it in the templates catalogue. Unlike the pre-defined templates, those resulted using the <strong>Save as New Template</strong> feature contain the Artifactory URL for each component (go to the <em>Components List</em> tab to access them).</p>
-<p><img src="./images/components-artifactory-url.png" alt=""></p>
+<p><img src="images/components-artifactory-url.png" alt=""></p>
 </li>
 </ol>
 <p><br>
@@ -117,7 +117,7 @@
 <li><p>Select the template you want to delete.</p>
 </li>
 <li><p>Click <strong>Delete Template</strong>.</p>
-<p><img src="./images/delete-custom-template.png" alt=""></p>
+<p><img src="images/delete-custom-template.png" alt=""></p>
 <div class="NOTE"><h5>Note</h5><p>This button is visible only for the custom templates.</p>
 <p>You cannot restore a deleted template.</p>
 </div>
