--- a/home/techguides/upgrade-trials.html
+++ b/home/techguides/upgrade-trials.html
@@ -80,12 +80,14 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+<div class="NOTE"><h5>Note</h5><p> Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
 </div>
 <h1 id="upgrade-trials">Upgrade Trials</h1>
 <p>The <strong>Upgrade</strong> feature enables you to boost your environment to higher T24 releases and run your regression. By undergoing an upgrade you can get better clarity on any issues with the upgrade and in general more confidence and predictability on the upgrade project itself.</p>
+<div class="NOTE"><h5>Note</h5><p> During the upgrade only the mandatory components are deployed (browser-classic, t24-ud, t24-jars, tafj-installer, modelbank-database-h2). You can deploy non-mandatory components using this <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html">user guide</a> post-upgrade, i.e., after exceptions are authorized and the DB is validated post the technical upgrade.</p>
 <p><br>
 </br></p>
+</div>
 <h1 id="upgrade-pre-requisites">Upgrade pre-requisites</h1>
 <p>To upgrade an environment you need:</p>
 <ol>
