--- a/home/techguides/clone-environment.html
+++ b/home/techguides/clone-environment.html
@@ -80,7 +80,7 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<div class="NOTE"><h5>Note</h5><p> Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+<div class="NOTE"><h5>Note</h5><p> Starting April 5th the TCD user guide will move to the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
 </div>
 <h1 id="clone-a-temenos-continuous-deployment-environment">Clone a Temenos Continuous Deployment environment</h1>
 <p>One of the features of the Temenos Platform is the possibility to create a clone of an environment.</p>
