--- a/home/techguides/add-app-endpoint.html
+++ b/home/techguides/add-app-endpoint.html
@@ -86,7 +86,7 @@
 <p>This document can be used by technical staff who need to add new endpoints to the T24 application of a Environment in case of adding any custom endpoints or deploying a plugin in the application server of the Environment.</p>
 <div class="NOTE"><h5>Note</h5><p>This guide presumes that an Environment is already created and available. <em>(In this example, we have created a Environment named DevEnv).</em></p>
 </div>
-<p><strong>Four</strong> properties are mandatory to create a new endpoint:</p>
+<p><strong>Three</strong> properties are mandatory to create a new endpoint:</p>
 <p><span style="color:orange">(Please note that the user guide contains <span style="color:blue"><strong>examples</strong></span> on how to use each of the properties).</span></p>
 <table>
 <thead>
@@ -134,13 +134,8 @@ Endpoint Description and URL are as per your choice. Type must be one of the opt
 </ul>
 <h1 id="add-multiple-endpoints-from-a-single-file">Add multiple endpoints from a single file</h1>
 <ul>
-<li><p>If a plugin has more than one endpoint, create a .endpoint file and add a separate line for each endpoint item, as below:
-<br></p>
-<p><img src="images/app-endpoint-all.png" alt="multiple endpoints same file">
-<br>
-<br></p>
-</li>
-<li>After the file is deployed, all 4 endpoints from the example are displayed in the Endpoints section of the T24 application.</li>
+<li>If a plugin has more than one endpoint, create a .endpoint file and add a separate line for each endpoint item, as below:</li>
+<li>After the file is deployed, all endpoints are displayed in the Endpoints section of the Transact application.</li>
 <li><p>Also note that the endpoints are displayed/ grouped by their type: clickable, copyable and downloadable.</p>
 <p><img src="images/app-endpoint-grouped.png" alt="multiple endpoints multiples files display"></p>
 </li>
