--- a/home/techguides/trigger-cob.html
+++ b/home/techguides/trigger-cob.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="what-happens-when-cob-is-triggered-during-a-factory-run">What happens when COB is triggered during a Factory Run</h1>
 
+<div class="NOTE"><h5>Note</h5><p> With the 202103 release, the TCD user guide will move to the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to TCSP and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="what-happens-when-cob-is-triggered-during-a-factory-run">What happens when COB is triggered during a Factory Run</h1>
 <p>This user guide explains what happens when COB is triggered during a factory run. COB can be run in company wise (e.g.: COB-GB0010001), group wise (e.g.: COB-1), or system wide (COB) in a Temenos Continuous Deployment environment as a part of test workflow (see how to manage workflows <a href="http://documentation.temenos.cloud/home/techguides/manage-workflows.html">here</a>). </p>
 <p>To run COB for multiple groups or companies at the same time when setting up <a href="http://documentation.temenos.cloud/home/techguides/automated-factories.html">the factory</a>, provide the TSA.SERVICE record ID separated by dots  (e.g. COB-1.COB-2) in the TSA.SERVICE ID in the portal.</p>
 <blockquote><p>Note: the maximum sessions configured in the TAFJEE  and standalone.xml is 20 by default. Hence if you run COB with 20 agents, the environment will become unresponsive.</p>
