--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -92,6 +92,8 @@ An organization can define as many components as needed but should have all mand
 <ul>
 <li><p>Component Type</p>
 </li>
+<li><p>Component Template</p>
+</li>
 <li><p>Name</p>
 </li>
 <li><p>Description</p>
