--- a/docfx_project/site/home/techguides/run-factory.html
+++ b/docfx_project/site/home/techguides/run-factory.html
@@ -111,9 +111,7 @@
 If the factory environment creation has failed during the previous factory run, it is not possible to use it for your current factory run. You need to first identify and solve the issue in order to see the <strong>Reuse the existing environment from previous factory run without overwriting it</strong> in the pop-up. Otherwise this checkbox will not appear in the pop-up.</p>
 </blockquote>
 <p><br> </p>
-<p>Once the <strong>Run</strong> button is clicked, the process is initiated and it gets immediately to the stage where an environment based on your chosen template is created:</p>
-<p><img src="images/run-factory-deploy.png" alt=""></p>
-<p>During the factory run you are able to:</p>
+<p>Once the <strong>Run</strong> button is clicked, the process is initiated and it gets immediately to the stage where an environment based on your chosen template is created. During the factory run you can:</p>
 <ol>
 <li><p>See the duration of total time between different stages and the status of the current stage</p>
 </li>
@@ -128,7 +126,7 @@ If the factory environment creation has failed during the previous factory run, 
     <img src="images/run-factory-abort-factory.png" alt=""><br><br></p>
 </li>
 <li><p>Refresh the timeline by clicking on the <strong>Refresh</strong> icon</p>
-<p><img src="images/run-factory-deploy2.png" alt=""></p>
+<p><img src="./images/run-factory-deploy2.png" alt=""></p>
 </li>
 </ol>
 <div class="NOTE"><h5>Note</h5><ol>
@@ -142,7 +140,7 @@ If the factory environment creation has failed during the previous factory run, 
 <blockquote><div class="NOTE"><h5>Note</h5><p>This environment is automatically deleted after the tests are run and the process is completed.</p>
 </div>
 </blockquote>
-<p><img src="images/run-factory-create-test.png" alt=""></p>
+<p><img src="./images/run-factory-create-test.png" alt=""></p>
 <p>After the tests are run, the dashboard shows details about the stages and the results, as in the example below:</p>
 <p><img src="images/run-factory-completed.png" alt=""></p>
 <p>You are able to do the following:</p>
