--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -131,11 +131,21 @@ An organization can define as many components as needed but should have all mand
 <ol>
 <li><p>Click on <strong>Settings</strong> button on the left menu &gt; this will expand a menu containing buttons for: Streams, Stages, Products, Factory and General</p>
 </li>
-<li><p>Select the <strong>Stream</strong> <em>(top-right)</em> where you want to add the respective component</p>
+<li><p>Select the <strong>Stream</strong> (top-right) where you want to add the respective component.</p>
 </li>
-<li><p>Click on <strong>New Components</strong></p>
+<li><p>Click  New <strong>Component</strong>.</p>
 </li>
-<li><p>Select the Component Type from the dropdown list and fill in the <strong>Component Name</strong>, <strong>Component Description</strong>, and <strong>Component Display Name</strong></p>
+<li><p>Select the <strong>Template type</strong>–  filters the templates available in your organization.</p>
+</li>
+<li><p>Select the <strong>Component Templates</strong> - filters the component types based on selected template</p>
+</li>
+<li><p>Select the <strong>Component Type</strong> from the dropdown list </p>
+</li>
+<li><p>Enter the <strong>Component Name</strong> </p>
+</li>
+<li><p>Enter a <strong>Component Description</strong></p>
+</li>
+<li><p>Enter a <strong>Component Display Name</strong></p>
 </li>
 <li><p>Click <strong>Create</strong>.</p>
 </li>
