--- a/docfx_project/site/home/overview.html
+++ b/docfx_project/site/home/overview.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h2 id="what-is-temenos-continuous-deployment"><strong>What is Temenos Continuous Deployment?</strong></h2>
 
+<div class="NOTE"><h5>Note</h5><p> With the 202103 release, the TCD user guide will move to the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to TCSP and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h2 id="what-is-temenos-continuous-deployment"><strong>What is Temenos Continuous Deployment?</strong></h2>
 <p>Temenos Continuous Deployment (TCD) is an offering from Temenos SaaS that provides client individuals and teams with the ability to manage, configure and assemble client licensed Temenos Software.</p>
 <p>Temenos Continuous Deployment enables you to create Environments, i.e. Temenos Suites on-demand, for non-production use in the cloud. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity. </p>
 <p><img src="images/cloud-offering.png" alt=""></p>
