--- a/docfx_project/site/home/techguides/components-products.html
+++ b/docfx_project/site/home/techguides/components-products.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="components--feature-description">Components – Feature Description</h1>
 
+<div class="NOTE"><h5>Note</h5><p> With the 202103 release, the TCD user guide will move to the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to TCSP and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="components--feature-description">Components – Feature Description</h1>
 <p>Components are individually deployable units that are understood by Temenos Continuous Deployment Platform based on the component type that each component refers to. </p>
 <p>Each component is associated to a component type to help Temenos Continuous Deployment Platform deploy the component. </p>
 <p>The <strong>Component Type</strong> field in the component data is the key to help the Temenos Continuous Deployment Platform Controllers deploy the right components in the right way. 
@@ -89,6 +91,8 @@ An organization can define as many components as needed but should have all mand
 <p>Each component has the following fields <em>(all mandatory)</em>:</p>
 <ul>
 <li><p>Component Type</p>
+</li>
+<li><p>Component Template</p>
 </li>
 <li><p>Name</p>
 </li>
@@ -127,11 +131,21 @@ An organization can define as many components as needed but should have all mand
 <ol>
 <li><p>Click on <strong>Settings</strong> button on the left menu &gt; this will expand a menu containing buttons for: Streams, Stages, Products, Factory and General</p>
 </li>
-<li><p>Select the <strong>Stream</strong> <em>(top-right)</em> where you want to add the respective component</p>
+<li><p>Select the <strong>Stream</strong> (top-right) where you want to add the respective component.</p>
 </li>
-<li><p>Click on <strong>New Components</strong></p>
+<li><p>Click  New <strong>Component</strong>.</p>
 </li>
-<li><p>Select the Component Type from the dropdown list and fill in the <strong>Component Name</strong>, <strong>Component Description</strong>, and <strong>Component Display Name</strong></p>
+<li><p>Select the <strong>Template type</strong>–  filters the templates available in your organization.</p>
+</li>
+<li><p>Select the <strong>Component Templates</strong> - filters the component types based on selected template</p>
+</li>
+<li><p>Select the <strong>Component Type</strong> from the dropdown list </p>
+</li>
+<li><p>Enter the <strong>Component Name</strong> </p>
+</li>
+<li><p>Enter a <strong>Component Description</strong></p>
+</li>
+<li><p>Enter a <strong>Component Display Name</strong></p>
 </li>
 <li><p>Click <strong>Create</strong>.</p>
 </li>
