--- a/docfx_project/site/home/techguides/create-publish-template.html
+++ b/docfx_project/site/home/techguides/create-publish-template.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="how-to-create-and-publish-a-new-template-after-a-successful-factory-run">How to Create and Publish a New Template after a Successful Factory Run</h1>
 
+<div class="NOTE"><h5>Note</h5><p> Starting April 5th the TCD user guide will move to the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="how-to-create-and-publish-a-new-template-after-a-successful-factory-run">How to Create and Publish a New Template after a Successful Factory Run</h1>
 <p>This feature offers the possibility to baseline a particular version of a product and create a template from that version. Furthermore, anybody will be able to create an environment with the baselined version of the product.</p>
 <p>To set up the factory, follow the steps from <a href="http://documentation.temenos.cloud/home/techguides/factories.html" title="here">here</a>.</p>
 <p>To run the factory, follow the steps from <a href="http://documentation.temenos.cloud/home/techguides/run-factory.html" title="here">here</a>.</p>
