--- a/docfx_project/site/home/enterprise-view.html
+++ b/docfx_project/site/home/enterprise-view.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="enterprise-view">Enterprise View</h1>
 
+<div class="NOTE"><h5>Note</h5><p> With the 202103 release, the TCD user guide will move to the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to TCSP and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="enterprise-view">Enterprise View</h1>
 <p>This section provides an overview of what the Temenos Continuous Deployment Platform solution is, and how it fits in with the wider Temenos and bank enterprise.</p>
 <p><img src="images/enterprise-view.png" alt=""></p>
 <p><strong>Note:</strong> </p>
