--- a/docfx_project/site/home/faq.html
+++ b/docfx_project/site/home/faq.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h2 id="implementation-faqs"><strong>Implementation FAQs</strong></h2>
 
+<div class="NOTE"><h5>Note</h5><p> With the 202103 release, the TCD user guide will move to the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to TCSP and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h2 id="implementation-faqs"><strong>Implementation FAQs</strong></h2>
 <hr>
 <ul>
 <li><strong>How can a customer gain access to Deployment Platform?</strong></li>
