--- a/docfx_project/site/home/techguides/artifactory-test-cycle.html
+++ b/docfx_project/site/home/techguides/artifactory-test-cycle.html
@@ -79,19 +79,21 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="artifactory-test-cycle">Artifactory Test Cycle</h1>
 
+<div class="NOTE"><h5>Note</h5><p> Starting April 5th the TCD user guide will move to the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to TCSP and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="artifactory-test-cycle">Artifactory Test Cycle</h1>
 <p>Temenos uses JFrog Artifactory that serves as a binary repository manager and which is designed to provide an end to end automated solution for tracking artifacts from development to production.</p>
 <p>See below an example of how the Artifactory folders look like after configuring the streams, stages, components, products and the factory. </p>
 <p><img src="images/artifactory-test-structure.png" alt=""></p>
-<p>After <a href="factories.md#set-up-create-a-factory" target="blank"><strong>creating a Factory</strong></a> and before running it, make sure you have uploaded:</p>
+<p>After <a href="./factories.md#set-up-create-a-factory" target="blank"><strong>creating a Factory</strong></a> and before running it, make sure you have uploaded:</p>
 <ul>
 <li><p>all required binaries for the principle (mandatory) components into the <strong>source</strong> stage (in this case - default_stage).</p>
 </li>
 <li><p>the testcases.zip file into the <strong>target</strong> stage (in this case - primary_stage_demo). <em>The folder name is TestCases.</em></p>
 </li>
 </ul>
-<p>See <a href="components-products.html#how-to-set-up-delete-components" target="blank"><strong>here</strong></a> how to upload the components&#39; binaries, respectively <a href="stage-testcases.md" target="blank"><strong>here</strong></a> for the test cases.</p>
+<p>See <a href="components-products.html#how-to-set-up-delete-components" target="blank"><strong>here</strong></a> how to upload the components&#39; binaries, respectively <a href="./stage-testcases.md" target="blank"><strong>here</strong></a> for the test cases.</p>
 <p><br></p>
               <hr>
               
