--- a/docfx_project/site/home/techguides/clone-environment.html
+++ b/docfx_project/site/home/techguides/clone-environment.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="clone-a-temenos-continuous-deployment-environment">Clone a Temenos Continuous Deployment environment</h1>
 
+<div class="NOTE"><h5>Note</h5><p> With the 202103 release, the TCD user guide will move to the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to TCSP and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="clone-a-temenos-continuous-deployment-environment">Clone a Temenos Continuous Deployment environment</h1>
 <p>One of the features of the Temenos Platform is the possibility to create a clone of an environment.</p>
 <p>In case different changes have been done such as: modifying the database, addition of new endpoints, installing plugins or others, and is needed a copy of that specific environment with all the changes, this can be easily done by clicking the clone button and creating a clone.</p>
 <p>Please see below some explanations on how this process works and what are the restrictions during the cloning action.</p>
@@ -117,7 +119,7 @@
 </ul>
 </li>
 </ul>
-<p><img src="./images/clone-refresh.png" alt=""></p>
+<p><img src="images/clone-refresh.png" alt=""></p>
 <ul>
 <li>The target environment (clone) will display the status <strong>Creating</strong> for:<ul>
 <li>T24 application</li>
