--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -691,9 +691,13 @@ o</p>
 <h1 id="attachments">Attachments</h1>
 <p>You can download the Standalone OSS (Wildfly/ H2)/ TSS (Jboss/ SQL) and the db.properties files below:</p>
 <ul>
-<li><p><strong><a href="./../zip/client-standalone-OSS">Standalone OSS (Wildfly/ H2) file</a></strong> </p>
+<li><p><strong><a href="./../zip/client-standalone-OSS-1">Standalone OSS (Wildfly/ H2) file applicable for lower template versions than 202008</a></strong> </p>
 </li>
-<li><p><strong><a href="./../zip/client-standalone-TSS">Standalone TSS (Jboss/ SQL) file</a></strong> </p>
+<li><p><strong><a href="./../zip/client-standalone-OSS-2">Standalone OSS (Wildfly/ H2) file applicable for higher template versions than 202008 (including the 202008 version)</a></strong> </p>
+</li>
+<li><p><strong><a href="./../zip/client-standalone-TSS-1">Standalone TSS (Jboss/ SQL) file applicable for lower template versions than 202008</a></strong> </p>
+</li>
+<li><p><strong><a href="./../zip/client-standalone-TSS-2">Standalone TSS (Jboss/ SQL) file applicable for higher template than 202008 (including the 202008 version)</a></strong> </p>
 </li>
 <li><p><strong><a href="../zip/db.properties">db.properties file</a></strong> </p>
 </li>
