--- a/home/techguides/run-factory.html
+++ b/home/techguides/run-factory.html
@@ -143,6 +143,9 @@ If the factory environment creation has failed during the previous factory run, 
 </div>
 </blockquote>
 <p><img src="./images/run-factory-create-test.png" alt=""></p>
+<p>During the factory run, Temenos Continuous Deployment validates the extension of the components uploaded to the Artifactory (go to <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html">this</a> user guide to see the correct format of the component defined in the template configuration script). If you fail to upload them as expected you will receive the following notification:</p>
+<p><img src="images/component-upload-notification.png" alt=""></p>
+<p>This feature is to validate the extension of component uploaded to factory source stage against template configuration script. Extension of the component should be same as defined in the template configuration and should be uploaded in the same format in Artifactory.</p>
 <p>After the tests are run, the dashboard shows details about the stages and the results, as in the example below:</p>
 <p><img src="images/run-factory-completed.png" alt=""></p>
 <p>You are able to do the following:</p>
