--- a/home/techguides/templates-list.html
+++ b/home/techguides/templates-list.html
@@ -96,79 +96,94 @@
 </thead>
 <tbody>
 <tr>
+<td>MB-Transact-Jboss-SQL-202101</td>
+<td>202101</td>
+<td>TSS-R20   Template for Stack06 - 202101 using ARM template</td>
+</tr>
+<tr>
+<td>MB-Transact-Jboss-SQL-202102</td>
+<td>202102</td>
+<td>TSS-R20   Template for Stack06 - 202102 using ARM template</td>
+</tr>
+<tr>
+<td>MB-Transact-Jboss-SQL-202103</td>
+<td>202103</td>
+<td>TSS-R20   Template for Stack06 - 202103 using ARM template</td>
+</tr>
+<tr>
 <td>MB-Transact-Jboss-SQL-202012</td>
 <td>202012</td>
-<td>TSS-R20 Template for Stack06 - 202012 using ARM template</td>
+<td>TSS-R20 Template for Stack06 - 202012 using ARM   template</td>
 </tr>
 <tr>
 <td>MB-Transact-Jboss-SQL-202011</td>
 <td>202011</td>
-<td>TSS-R20 Template for Stack06 - 202011 using ARM template</td>
+<td>TSS-R20 Template for Stack06 - 202011 using ARM   template</td>
 </tr>
 <tr>
 <td>MB-Transact-Jboss-SQL-202010</td>
 <td>202010</td>
-<td>TSS-R20 Template for Stack06 - 202010 using ARM template</td>
+<td>TSS-R20 Template for Stack06 - 202010 using ARM   template</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-202008</td>
 <td>202008</td>
-<td>TSS-R20 Template for Stack06 - 202008 using ARM template</td>
+<td>TSS-R20 Template for Stack06 - 202008 using ARM   template</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-202004-ARM</td>
 <td>202004</td>
-<td>TSS-R20Template   for Stack06 - 202004 using ARM template</td>
+<td>TSS-R20Template for Stack06 - 202004 using ARM   template</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-202003</td>
 <td>202003</td>
-<td>TSS-R20Template   for Stack06 - 202003</td>
+<td>TSS-R20Template for Stack06 - 202003</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-202002</td>
 <td>202002</td>
-<td>TSS-R20Template   for Stack06 - 202002</td>
+<td>TSS-R20Template for Stack06 - 202002</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-202001</td>
 <td>202001</td>
-<td>TSS-R20Template   for Stack06 - 202001</td>
+<td>TSS-R20Template for Stack06 - 202001</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201912</td>
 <td>201912</td>
-<td>TSS-R19Template   for Stack06 - 201912</td>
+<td>TSS-R19Template for Stack06 - 201912</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201911</td>
 <td>201911</td>
-<td>TSS-R19Template   for Stack06 - 201911</td>
+<td>TSS-R19Template for Stack06 - 201911</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201910</td>
 <td>201910</td>
-<td>TSS-R19Template   for Stack06 - 201910</td>
+<td>TSS-R19Template for Stack06 - 201910</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201909</td>
 <td>201909</td>
-<td>TSS-R19Template   for Stack06 - 201909</td>
+<td>TSS-R19Template for Stack06 - 201909</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201908</td>
 <td>201908</td>
-<td>TSS-R19Template   for Stack06 - 201908</td>
+<td>TSS-R19Template for Stack06 - 201908</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201904</td>
 <td>201904</td>
-<td>TSS-R19Template   for Stack06 - 201904</td>
+<td>TSS-R19Template for Stack06 - 201904</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201804</td>
 <td>201804</td>
-<td>TSS-R18Template   for Stack06 - 201804</td>
+<td>TSS-R18Template for Stack06 - 201804</td>
 </tr>
 </tbody>
 </table>
@@ -182,6 +197,21 @@
 </tr>
 </thead>
 <tbody>
+<tr>
+<td>MB-Transact-Wildfly-H2-202101</td>
+<td>202101</td>
+<td>T24 R21.01 (Open Source)</td>
+</tr>
+<tr>
+<td>MB-Transact-Wildfly-H2-202102</td>
+<td>202102</td>
+<td>T24 R21.02 (Open Source)</td>
+</tr>
+<tr>
+<td>MB-Transact-Wildfly-H2-202103</td>
+<td>202103</td>
+<td>T24 R21.03 (Open Source)</td>
+</tr>
 <tr>
 <td>MB-Transact-Wildfly-H2-202012</td>
 <td>202012</td>
@@ -343,6 +373,11 @@
 </thead>
 <tbody>
 <tr>
+<td>MB-FCMT24-Jboss-SQL-202004</td>
+<td>202004</td>
+<td>FCM T24 202004 (Jboss and SQL)</td>
+</tr>
+<tr>
 <td>MB-FCMT24-Jboss-SQL-202003</td>
 <td>202003</td>
 <td>FCM T24 202003 (Jboss and SQL)</td>
@@ -375,7 +410,7 @@
 <tr>
 <td>MB-FCMT24-Jboss-SQL-201909</td>
 <td>201909</td>
-<td>FCM T24 201909  (Jboss and SQL)</td>
+<td>FCM T24 201909 (Jboss and SQL)</td>
 </tr>
 <tr>
 <td>MB-FCMT24-Jboss-SQL-201907</td>
