--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -689,7 +689,7 @@ o</p>
 </br></p>
 </div>
 <h1 id="attachments">Attachments</h1>
-<p>You can download the Standalone OSS (Wildfly/ H2)/ TSS (Jboss/ SQL) and the db.properties files below:</p>
+<p>You can download/ view the Standalone OSS (Wildfly/ H2)/ TSS (Jboss/ SQL) and the db.properties files below:</p>
 <ul>
 <li><p><strong><a href="./../zip/client-standalone-OSS-1">Standalone OSS (Wildfly/ H2) file applicable for lower template versions than 202008</a></strong> </p>
 </li>
