--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -91,7 +91,7 @@
 <p>Starting from 202102, user management has been improved so that you can access multiple Organisations from a single user account. To use this feature, you should keep the account with your correct company email address and ask your Organisation Admin to assign access to all the necessary Organisations. You can then delete the other unnecessary user accounts, likely setup with spoof email addresses.</p>
 <div class="NOTE"><h5>Note</h5><p>Always make sure you use a valid email address (i.e. org admins can receive emails from the Temenos Continuous Deployment team about templates). By using fake emails you won’t get these notifications that can impact you/your organization’s work on the platform.</p>
 </div>
-<p>Once logged in to your desired organization you can copy the org ID and name:</p>
+<p>Once logged in to your desired organization you can copy the org ID and name.</p>
 <p><img src="./images/organisation-details.png" alt=""></p>
 <p>Once logged in you can switch the organization:</p>
 <ul>
@@ -100,17 +100,22 @@
 <p> Note that only the users with the &#39;Admin&#39; permission can create more users. To manage/ see the users please refer to the below.</p>
 <p><img src="images/users-tab.png" alt=""></p>
 <ol>
-<li><p>Go to the menu on the left and then click Users tab, as below:</p>
-</li>
-<li><p>Click on the <strong>Users</strong> tab </p>
+<li><p>Go to the menu on the left and then click <strong>Users</strong> tab, as below:</p>
 </li>
 <li><p>To order the users&#39; list hover over the <strong>Name</strong> tab - the users will be listed in an alphabetical order</p>
 </li>
 <li><p>Click on the <strong>Status</strong> tab to see the status of each user (i.e. the user status can be <strong>creating, editing, failed, deleting</strong>)</p>
 </li>
-<li><p>Create a new user by clicking the <strong>New user</strong> button on the top-right corner. Fill in the username, email, password and the user role (the SSH Key can be added later on if needed).</p>
+<li><p>Create a new user by clicking the <strong>New user</strong> button on the top-right corner. Enter a email address.  It is important to add a valid email as you might receive communications on it.</p>
 </li>
-<li><p>Click <strong>Create</strong></p>
+</ol>
+<p><img src="images/create-user.png" alt=""></p>
+<ol>
+<li><p>Enter a user name. At this stage, the platform validates whether the email and user name already exists in the database.</p>
+</li>
+<li><p>If the email and the username pass the first round of validation, then you can define the user&#39;s password, add the SSH Key (optional) and assign a user role to it.</p>
+</li>
+<li><p>Click <strong>Create</strong>. </p>
 </li>
 </ol>
 <p><img src="images/create-user.png" alt=""></p>
