--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -92,10 +92,10 @@
 <div class="NOTE"><h5>Note</h5><p>Always make sure you use a valid email address (i.e. org admins can receive emails from the Temenos Continuous Deployment team about templates). By using fake emails you won’t get these notifications that can impact you/your organization’s work on the platform.</p>
 </div>
 <p>Once logged in to your desired organization you can copy the org ID and name.</p>
-<p><img src="./images/organisation-details.png" alt=""></p>
+<p><img src="images/organisation-details.png" alt=""></p>
 <p>Once logged in you can switch the organization:</p>
 <ul>
-<li>Click on the  arrows <img src="./images/organisation-arrows.png" alt=""> next to the organization arrows. A notification appears, similar to the one above which enables you to select the organization you want to access.</li>
+<li>Click on the  arrows <img src="images/organisation-arrows.png" alt=""> next to the organization arrows. A notification appears, similar to the one above which enables you to select the organization you want to access.</li>
 </ul>
 <p> Note that only the users with the &#39;Admin&#39; permission can create more users. To manage/ see the users please refer to the below.</p>
 <p><img src="images/users-tab.png" alt=""></p>
